- reviewed/rewritted README.md

--- a/clients/js/browser/index.html
+++ b/clients/js/browser/index.html
@@ -3,7 +3,9 @@
   <title>CoreAPI SKU Comment Tone API browser client</title>
 </head>
 <body>
-  
+
+Open Javascript console please.
+
 <!--
 
 Run this with: python -m SimpleHTTPServer 8001
